# MonopolyAI

./: .clang-format  Board.cpp  CMakeLists.txt  Field.h  Player.cpp  Player.h  README.md  Trains.h  Utilities.cpp  Utilities.h  main.cpp
.github/workflows/: run-tests.yml
src/: AdvanceToCard.cpp  AdvanceToCard.h  Bank.cpp  Bank.h  Board.cpp  Board.h  BoardExceptions.cpp  BoardExceptions.h  BoardSetupper.cpp  BoardSetupper.h  Card.cpp  Card.h  CardField.cpp  CardField.h  Constants.h  Decision.cpp  Decision.h  Field.cpp  Field.h  Game.cpp  Game.h  GameCli.cpp  GameCli.h  GoToJailField.cpp  GoToJailField.h  OwnableField.cpp  OwnableField.h  Player.cc  Player.cpp  Player.h  Property.cpp  Property.h  TaxField.cpp  TaxField.h  Trains.cpp  Trains.h  Utilities.h
src/Decision/: AiDecisionSelector.cpp  AiDecisionSelector.h  ConsoleDecisionSelector.cpp  ConsoleDecisionSelector.h  DecisionSelector.cc  DecisionSelector.cpp  DecisionSelector.h  FieldBuyVisitor.cpp  FieldBuyVisitor.h  FieldVisitor.cpp  FieldVisitor.h
src/Exceptions/: BoardExceptions.h
src/Fields/: CardField.cc  CardField.h  Field.cpp  Field.h  GoToJailField.cpp  GoToJailField.h  OwnableField.cc  OwnableField.cpp  OwnableField.h  Property.cc  Property.cpp  Property.h  TaxField.cc  TaxField.cpp  TaxField.h  Trains.cc  Trains.cpp  Trains.h  Utilities.h
src/neat/: BaseEdge.h  Crossover.cpp  Crossover.h  FitnessEvaluator.cpp  FitnessEvaluator.h  Genotype.cpp  Genotype.h  HistoricalMarkings.cpp  HistoricalMarkings.h  Mutation.cpp  Mutation.h  Phenotype.cpp  Phenotype.h  Population.cpp  Population.h  Random.cpp  Random.h  Species.cpp  Species.h  config.h  sigmoid.h  speciationDistance.cpp  speciationDistance.h
tests/: TestBank.cpp  TestBoard.cpp  TestCardField.cpp  TestCrossover.cpp  TestField.cpp  TestGamesScenarios.cpp  TestGenotype.cpp  TestGetFieldDecisions.cpp  TestGoToJailField.cpp  TestHistoricalMarkings.cpp  TestMutation.cpp  TestPhenotype.cpp  TestPlayer.cpp  TestPopulation.cpp  TestProperty.cpp  TestSpeciationDistance.cpp  TestSpecies.cpp  TestTaxFeild.cpp  TestTaxField.cpp  TestTrainsField.cpp  TestUtilitiesField.cpp  test.cpp
